<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <!-- Título de bienvenida -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_a_vinilos"
        android:textSize="28sp"
        android:textColor="@color/darkGray"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:ellipsize="none"
        android:maxLines="3"
        android:importantForAccessibility="yes" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="20dp"
        android:elevation="6dp"
        android:contentDescription="@string/logo_app" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accede_como"
        android:textSize="20sp"
        android:textColor="@color/darkGrayPrimary"
        android:fontFamily="sans-serif"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:ellipsize="none"
        android:maxLines="2"
        android:importantForAccessibility="yes" />

    <Button
        android:id="@+id/button_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textColor="@color/white"
        android:backgroundTint="@color/secondaryGray"
        android:elevation="4dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/button_coleccionista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coleccionista"
        android:textColor="@color/white"
        android:backgroundTint="@color/secondaryGray"
        android:elevation="4dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="16dp" />

</LinearLayout>
