<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewUserIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/user_icon"
        app:tint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/textViewRoleHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vinilos"
        android:textColor="@color/colorOnSurfaceDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uniandes_designers"
        android:textColor="@color/colorOnSurfaceDark"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="4dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?attr/colorOutline" />
</LinearLayout>
